CHANGELOG
=========

1.3.1
-----

* Bump kemitix-parent from 5.1.1 to 5.2.0 (#83)

1.3.0
-----

* [pmd] exec pmd:pmd and pmd:cpd during test phase
* [pmd] Bump pmd.version from 6.7.0 to 6.8.0
* [pitest] Bump pitest-maven from 1.4.2 to 1.4.3

1.2.0
-----

* [compiler] rename tile as `compiler-jdk-8`
* [compiler-jdk-11] new tile
* [all-jdk-11] new tile
* [enforcer] require Maven 3.5.4
* [readme] rewritten (in org-mode format)

1.1.0
-----

* Improved declaration of versions

1.0.0
-----

* Bump maven-compiler-plugin from 3.7.0 to 3.8.0
* Bump jacoco-maven-plugin from 0.8.1 to 0.8.2
* Bump pitest-maven-plugin from 1.4.0 to 1.4.2
* Bump pmd from 6.5.0 to 6.6.0
* Bump tiles-maven-plugin from 2.11 to 2.12

0.9.0
-----

* Upgrade `tiles-maven-plugin` to 2.11
* Upgrade `kemitix-parent` to 5.1.1
* Revert java compiler to java version 1.8
* Upgrade `jacoco-maven-plugin` to 0.8.1
* Upgrade `maven-enforcer-plugin` to 3.0.0-M2
* enforcer: allow Maven 3.3.9
* Upgrade `maven-clean-plugin` to 3.1.0
* Upgrade `maven-resource-plugin` to 3.1.0
* Upgrade `maven-site-plugin` to 3.7.1
* Upgrade `highwheel-maven` to 1.3
* Upgrade `pitest-maven` to 1.4.0
* Upgrade `maven-pmd-plugin` to 3.10.0
* Upgrade `pmd` to 6.5.0
* Upgrade `maven-surefire-plugin` to 2.22.0
* Upgrade `maven-failsafe-plugin` to 2.22.0
* Upgrade `maven-wrapper` to 3.5.4
* Upgrade `kemitix-pmd-ruleset` to 0.3.0

0.8.1
-----

* maven-plugins: update missed renamed property use

0.8.0
-----

* testing: upgrade `maven-{surefire,failsafe}-plugin` to 2.21.0
* pmd: upgrade `pmd` to 6.1.0
* pitest: upgrade `pitest-maven-plugin` to 1.3.2
* maven-plugins: upgrade `maven-site-plugin` to 3.7
* coverage: upgrade `jacoco-maven-plugin` to 0.8.0
* coverage: remove `coveralls-maven-plugin`
* maven-plugins: Upgrade `versions-maven-plugin` to 2.5
* enforcer: upgrade `maven-enforcer-plugin` to 3.0.0-M1 for Java 9 compatibility

0.7.1
-----

* Set module versions correctly

0.7.0
-----

* Upgrade `kemitix-pmd-ruleset` to 0.2.0

0.6.1
-----
