@@ -19,9 +19,6 @@
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
-        <jacoco-class-line-covered-ratio>100%</jacoco-class-line-covered-ratio>
-        <jacoco-class-instruction-covered-ratio>100%</jacoco-class-instruction-covered-ratio>
-        <jacoco-class-missed-count-maximum>0%</jacoco-class-missed-count-maximum>
     </properties>
 
     <build>
