@@ -18,7 +18,6 @@
 
     <properties>
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
-        <required-maven.version>3.5.4</required-maven.version>
     </properties>
 
     <build>
