@@ -19,10 +19,6 @@
     <properties>
         <highwheel-maven-plugin.version>1.3</highwheel-maven-plugin.version>
         <pitest-maven-plugin.version>1.4.3</pitest-maven-plugin.version>
-        <pitest.coverage>0</pitest.coverage>
-        <pitest.mutation>0</pitest.mutation>
-        <pitest.skip>false</pitest.skip>
-        <pitest.failWhenNoMutations>true</pitest.failWhenNoMutations>
     </properties>
 
     <build>
