@@ -5,6 +5,7 @@ CHANGELOG
 -----
 
 * Bump kemitix-parent from 5.1.1 to 5.2.0 (#83)
+* Re-eneable properties to configure tiles (#85)
 
 1.3.0
 -----
